# eliittilukio

./: Dockerfile  build.sh  package.json  pnpm-lock.yaml  svelte.config.js
backend/: Cargo.toml
backend/src/: app_error.rs  main.rs  schema.sql  user_api.rs  util.rs
src/data/: pages.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  Header.svelte  app.less
src/routes/ilmoitukset/: +page.svelte
src/routes/login/: +page.svelte
src/routes/minecraft/: +page.svelte
src/routes/oispaeliitti/: +page.svelte  +page.ts  GameGrid.svelte  Grid.svelte  engine.js  tiles.css
src/routes/palauteboksi/: +page.svelte
src/routes/register/: +page.svelte
src/routes/ruokavuorot/: +page.svelte  data.ts  parser.ts
