[package]
name = "eliittilukio-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie", "typed-header"] }
bigdecimal = "0.4.7"
jsonwebtoken = "9.3.1"
serde = "1.0.217"
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["bigdecimal", "chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
